hopin i fixed tthe white space

--- a/style.css
+++ b/style.css
@@ -35,7 +35,6 @@ body {
   right: 0;
   bottom: 0;
   max-width: 100%;
-  min-height: 100%;
   overflow: scroll;
 }
 
